# tension_spline_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pybind_module.cpp  pyproject.toml  setup.py
TensionSpline.egg-info/: PKG-INFO  SOURCES.txt
include/: tension_spline.cpp  tension_spline.h
src/: CMakeLists.txt  tension_spline.cpp  tension_spline.h
tests/: tension_spline_tests.cpp
tests/test_data/: trial_data_1.csv  trial_data_1_tau_0.01.csv  trial_data_1_tau_0.1.csv  trial_data_1_tau_1.csv  trial_data_1_tau_10.csv  trial_data_2.csv  trial_data_2_tau_0.01.csv  trial_data_2_tau_0.1.csv  trial_data_2_tau_1.csv  trial_data_2_tau_10.csv
