[build-system]
requires = ["setuptools>=42", "wheel", "cmake", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "TensionSpline"
version = "0.0.1"
description = "A Tension Spline Implementation for C++"
authors = [
    { name = "Okwuchukwu Nwobi", email = "dnwobi1@gmail.com" }
]
requires-python = ">=3.6"
